<resources>
    <string name="app_name">Earthread</string>
    <string name="check_id_pw">아이디와 비밀번호를 확인해주세요.</string>
    <string name="not_match_id_pw">아이디와 비밀번호가 일치하지 않습니다.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="google_login">Google 계정으로 로그인</string>
    <string name="nickname">닉네임 입력(1~10 길이 제한)</string>
    <string name="pick_picture">프로필 사진을 선택하여 주십시오.</string>
    <string name="save">저장</string>
    <string name="board_image">게시물 이미지</string>
    <string name="chat_image">게시물 이미지</string>
    <string name="chat_exit">채팅방 나가기</string>
    <string name="board">게시판</string>
    <string name="my_talk">내 톡</string>
    <string name="talk">톡</string>
    <string name="my_page">마이페이지</string>
    <string name="like_button">좋아요 버튼</string>
    <string name="dislike_button">싫어요 버튼</string>
    <string name="send_message">메세지 보내기</string>
    <string name="reply_button">댓글 버튼</string>
    <string name="watcher_img">조회수</string>
    <string name="search">search</string>
    <string name="filter">filter</string>
    <string name="cancel">취소</string>
    <string name="register">등록</string>
    <string name="edit_title">제목을 입력해주세요.</string>
    <string name="edit_content">내용을 입력해주세요.</string>
    <string name="edit_image">사진에 대한 설명을 입력해주세요.</string>
    <string name="not_request_image">이미지를 불러오질 못했습니다.</string>
    <string name="add_image">이미지 추가 버튼</string>
    <string name="back">뒤로가기</string>
    <string name="Favorites">즐겨찾기</string>
    <string name="report">신고</string>
    <string name="register_reply">댓글을 입력해주세요.</string>
    <string name="modify">수정</string>
    <string name="remove">삭제</string>
    <string name="dialog_question">게시글을 삭제하시겠습니까?</string>
    <string name="commercial_report">원치 않는 상업성 콘텐츠 또는 스팸</string>
    <string name="pornography_report">포르노 또는 음란물</string>
    <string name="child_abuse_report">아동 학대</string>
    <string name="violence_report">증오심 표현 또는 노골적인 폭력</string>
    <string name="terror_report">테러 조장</string>
    <string name="torment_report">희롱 또는 괴롭힘</string>
    <string name="suicide_report">자살 또는 자해</string>
    <string name="misinformation_report">잘못된 정보</string>
    <string name="search_hint">검색어를 입력하세요.</string>
    <string name="sort_standard">정렬기준</string>
    <string name="filter_apply">필터적용</string>
    <string name="message_hint">메세지 입력</string>
    <string name="participants">참여인원</string>
    <string name="extra">더보기</string>
    <string name="send_image">사진을 보냈습니다.</string>
    <string name="make_chat">대화방 만들기</string>
    <string name="make_chat_request">대화방을 만드시겠습니까?</string>
    <string name="dialog_chat_question">나가기를 하면 대화내용이 모두 삭제되고 채팅목록에서도 삭제됩니다.</string>
    <string name="exit">나가기</string>
    <string name="no_chat_list">아직 들어가있는 채팅방이 없습니다.</string>
    <string name="no_board_list">게시물이 없습니다.</string>
    <string name="exit_user">상대방이 나갔습니다.</string>
    <string name="add_chat">대화방 만들기</string>
    <string name="new_open_chat">새 그룹대화</string>
    <string name="open_chat">그룹대화</string>
    <string name="chat_title">대화방 이름</string>
    <string name="chat_info">대화방 소개</string>
    <string name="people_count">인원수</string>
    <string name="entry_chat">채팅방에 참여하시겠습니까?</string>
    <string name="participate">참여하기</string>
    <string name="board_item">게시물</string>
    <string name="like">좋아요</string>
    <string name="my_chatting">내 채팅</string>
    <string name="open_chatting">오픈 채팅</string>
    <string name="profile_image">프로필 이미지</string>
    <string name="right_arrow">오른쪽 화살표</string>
    <string name="change">변경</string>
    <string name="change_nickname">닉네임 변경</string>
    <string name="basic_image">기본 이미지로 변경</string>
    <string name="select_image">앨범에서 이미지 선택</string>
    <string name="no_my_item">작성하신 글이 없습니다.</string>
    <string name="dialog_logout_question">로그아웃 하시겠습니까?</string>
    <string name="logout">로그아웃</string>
    <string name="interest">관심사</string>
    <string name="notification">삭제된 게시물입니다.</string>
    <string name="no_open_chat_list">개설된 채팅방이 없습니다.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="chat_max_length">1~30 글자 제한</string>
    <string name="block">차단하기</string>
    <string name="me">나</string>
    <string name="clear">해제</string>
    <string name="block_type">차단 목록</string>
    <string name="no_block_list">차단한 유저가 없습니다.</string>
    <string name="block_remove">차단 해제</string>
    <string name="dialog_block_question">차단을 해제하시겠습니까?</string>
    <string name="user_block">메세지만 차단</string>
    <string name="all_block">메세지와 게시물 모두 차단</string>
    <string name="chat_info_max_length">1~60 글자 제한</string>
    <string name="block_user">상대방을 차단하시겠습니까?</string>
</resources>