<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:textColor="@color/light_gray"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text">

        <RadioButton
            android:id="@+id/commercial_radio_button"
            android:paddingStart="5dp"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/commercial_report"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/pornography_radio_button"
            android:layout_width="match_parent"
            android:paddingStart="5dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/pornography_report"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/child_abuse_radio_button"
            android:layout_width="match_parent"
            android:paddingStart="5dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/child_abuse_report"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/violence_radio_button"
            android:layout_width="match_parent"
            android:buttonTint="@color/white"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:paddingStart="5dp"
            android:text="@string/violence_report"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/terror_radio_button"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:paddingStart="5dp"
            android:text="@string/terror_report"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/torment_radio_button"
            android:layout_width="match_parent"
            android:paddingStart="5dp"
            android:text="@string/torment_report"
            android:buttonTint="@color/white"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/suicide_radio_button"
            android:layout_width="match_parent"
            android:text="@string/suicide_report"
            android:paddingStart="5dp"
            android:buttonTint="@color/white"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/misinformation_radio_button"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:paddingStart="5dp"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:text="@string/misinformation_report"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

    </RadioGroup>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="@color/light_gray"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"/>

    <TextView
        android:id="@+id/cancel_text"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/report_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/report_text"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:text="@string/report"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>