<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:padding="10dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/cancel_image_button"
        android:layout_width="30dp"
        android:src="@drawable/ic_close"
        android:background="@color/limpidity"
        android:layout_gravity="start"
        android:layout_height="30dp"
        android:contentDescription="@string/cancel" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/make_chat_request"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/send_message_button"
        android:layout_width="match_parent"
        android:background="@drawable/gradient_border_box"
       android:text="@string/make_chat"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:layout_height="40dp" />


</LinearLayout>