<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_exit"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:text="@string/dialog_chat_question" />

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/remove_button"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/question_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/exit" />

</androidx.constraintlayout.widget.ConstraintLayout>