<?xml version="1.0" encoding="utf-8"?>
<layout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegistrationActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo_black"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/signup_id_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:drawableTint="@color/peach"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:backgroundTint="@color/peach"

        android:singleLine="true"
        android:textColor="@color/peach"
        android:textColorHint="@color/peach"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/signup_pw_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/peach"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:singleLine="true"
        android:textColor="@color/peach"
        android:textColorHint="@color/peach"
        android:backgroundTint="@color/peach"

        android:layout_marginBottom="30dp"
        android:textSize="20sp" />


    <Button
        android:id="@+id/signup_button"
        android:layout_width="200dp"
        android:background="@drawable/gradient_border_box"
        android:text="@string/sign_up"

        android:textColor="@color/white"
        android:layout_margin="30dp"
        android:layout_height="wrap_content" />


</LinearLayout>

</layout>