<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_img"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/board_image" />

    <EditText
        android:id="@+id/image_edt"
        android:layout_width="300dp"
        android:importantForAutofill="no"
        android:hint="@string/edit_image"
        android:backgroundTint="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_img"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/light_gray"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/remove_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_close"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/remove" />

</androidx.constraintlayout.widget.ConstraintLayout>