<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:text="@string/dialog_logout_question" />

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/remove_button"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/question_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/logout" />

</androidx.constraintlayout.widget.ConstraintLayout>